--- a/requirements.txt
+++ b/requirements.txt
@@ -166,6 +166,8 @@ qiskit==1.2.4
 qiskit-aer==0.15.1
 qiskit-ibm-provider==0.11.0
 qiskit-ibm-runtime==0.31.0
+qiskit_algorithms==0.3.1
+qiskit_nature==0.7.2
 qsimcirq==0.21.0
 quil==0.13.1
 qulacs==0.6.10
